[gd_scene load_steps=4 format=3 uid="uid://d4njkjda5a7uj"]

[ext_resource type="Script" path="res://scenes/scripts/WindSFXTrigger.gd" id="1_ngjea"]
[ext_resource type="AudioStream" uid="uid://cv5lxl1hpatqt" path="res://assets/audio/sfx/strong wind blowing.mp3" id="2_v2e5t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1bqs"]
size = Vector2(2000, 107.976)

[node name="WindSFXTrigger" type="Node2D" node_paths=PackedStringArray("audio_player")]
process_mode = 3
script = ExtResource("1_ngjea")
audio_player = NodePath("AudioStreamPlayer")
stop_on_leave = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v2e5t")
volume_db = -20.0
bus = &"SFX"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7, 475.5)
scale = Vector2(8.4, 8.4)
shape = SubResource("RectangleShape2D_o1bqs")
debug_color = Color(0.929412, 0.984314, 1, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
